<resources>
    <string name="app_name">GadsLeaderBoard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_hours">Image Hours</string>
    <string name="badge">Badge</string>
    <string name="learning_hours">\tlearning hours, </string>
    <string name="skill_iq">\tskill IQ score, </string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>
    <string name="leaderBoard">LeaderBoard</string>
    <string name="submit">Submit</string>
    <string name="logo">Logo</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on Github (link)</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="submission_successful">Submission successful</string>
    <string name="submission_not_successful">Submission not successful</string>

</resources>